# CPlusPlus

Threads/: future.h  main.cpp  promise.h  readme.txt  threadpool.h
Threads/hw1/: CMakeLists.txt  Makefile  cmake_install.cmake  thread_pool
Threads/hw1/include/: thread_pool.h
Threads/hw1/source/: main.cpp  thread_pool.cpp
Threads/hw1/tests/: thread_pool.cpp
Threads/hw2/: CMakeLists.txt  Makefile  cmake_install.cmake  future_promise
Threads/hw2/123/: future.cpp  future.lmao  promise.cpp  promise.lmao  shared_state.cpp  shared_state.lmao
Threads/hw2/include/: future.h  shared_state.h
Threads/hw2/source (копия)/: main.cpp  promise.cpp
Threads/hw2/tests/: promise_test.cpp
Threads/hw3/: CMakeLists.txt  Makefile  cmake_install.cmake  flatten
Threads/hw3/include/: flatten.h  future.h
Threads/hw3/tests/: flatten_test.cpp
Threads/hw4/: CMakeLists.txt  Makefile  cmake_install.cmake  map
Threads/hw4/include/: future.h  map.h  promise.h  shared_state.h  thread_pool.h
Threads/hw4/source/: thread_pool.cpp
Threads/hw4/tests/: map_test.cpp
Threads/hw5/: CMakeLists.txt  Makefile  cmake_install.cmake  flatten_tuple
Threads/hw5/include/: flatten.h  promise.h
Threads/hw5/source/: main.cpp
Threads/hw5/tests/: flatten_test.cpp
Threads/hw6/: CMakeLists.txt  Makefile  cmake_install.cmake  parallel
Threads/hw6/include/: future.h  shared_state.h  thread_pool.h
Threads/hw6/source/: thread_pool.cpp
Threads/hw6/tests/: parallel_test.cpp
